[package]
name = "active-url-validator"
version = "0.1.0"
authors = ["Joshua Clayton <joshua.clayton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10" }
tokio = { version = "0.2", features = ["full"] }
futures = { version = "0.3" }
indicatif = { version = "0.15" }
