[package]
name = "active-url-validator"
version = "0.1.0"
authors = ["Joshua Clayton <joshua.clayton@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11" }
tokio = { version = "1.35", features = ["full"] }
futures = { version = "0.3" }
indicatif = { version = "0.17" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
